k8s/cka/7/07.yaml
apiVersion: network.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-port-from-namespace
  namespace: my-app
spec:
  policyTypes: ["Ingress"]
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: my-app
    ports:
    - name:  Port_Name
      port:  9200 
      protocol: TCP
