k8s/cka/7/default_networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name:  mynp
  namespace: default
spec:
  podSelector:  {}
  policyTypes:
  - Ingress
  - Egress
  egress:
  - {}
